--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
+    "cookieconsent": "^3.1.1",
     "jwt-decode": "^3.1.2",
+    "ngx-cookieconsent": "^4.0.1",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
